--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
   },
   "homepage": "http://smmdb.ddns.net/net64",
   "dependencies": {
+    "axios": "^0.17.1",
     "electron": "^1.6.14",
-    "got": "^7.1.0",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
-    "marked": "^0.3.6",
+    "marked": "^0.3.9",
     "node-emoji": "^1.8.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
