--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "net64plus",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "compatVersion": "1.0.0",
   "description": "Net64+ client",
   "main": "index.js",
@@ -53,10 +53,11 @@
     "bufferutil": "^3.0.3",
     "csv-parse": "https://github.com/Tarnadas/node-csv-parse.git",
     "deepmerge": "^2.0.1",
+    "dompurify": "^1.0.4",
     "electron": "1.8",
     "history": "^4.7.2",
     "immer": "^0.8.1",
-    "marked": "^0.3.9",
+    "marked": "^0.4.0",
     "node-emoji": "^1.8.1",
     "protobufjs": "^6.8.4",
     "react": "^16.0.0",
@@ -74,6 +75,7 @@
   "devDependencies": {
     "@types/csv-parse": "^1.1.11",
     "@types/deepmerge": "^1.3.3",
+    "@types/dompurify": "^0.0.31",
     "@types/history": "^4.6.2",
     "@types/jest": "^22.0.1",
     "@types/marked": "^0.3.0",
